2009-05-19  Andrew Overholt  <overholt@redhat.com>

	* feature.properties: Change provider from Eclipse.org to Eclipse.

2009-04-23  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Remove 5.0.0.qualifier versions on CDT dependencies.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: 0.2.0 version.

2009-01-14  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Re-add update site information (sorry).

2009-01-14  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Removed update site information.

2009-01-08  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added CDT features to required features.

2009-01-06  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Add update site information.  Remove Linux requirement.

2008-12-16  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added dependencies and Linux requirement.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Typo in feature ID.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Inital checkin.
	* feature.xml: Likewise.
	* feature.properties: Likewise.
	* epl-v10.html: Likewise.