@@ -1,3 +1,7 @@
+2009-05-20  Elliott Baron  <ebaron@redhat.com>
+
+	* feature.xml: Remove '.feature' from feature ID.
+
 2009-05-19  Andrew Overholt  <overholt@redhat.com>
 
 	* feature.properties: Change provider from Eclipse.org to Eclipse.
